fix tooltip hover spacing

--- a/ui/app/styles/core/charts.scss
+++ b/ui/app/styles/core/charts.scss
@@ -38,6 +38,7 @@
   border-radius: $radius-large;
   flex-wrap: nowrap;
   width: fit-content;
+  margin-bottom: $spacing-8;
 
   .bold {
     font-weight: $font-weight-bold;
